opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_websocket"
bug-reports: "https://github.com/janestreet/async_websocket/issues"
dev-repo: "git+https://github.com/janestreet/async_websocket.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_websocket/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async"
  "async_rpc_kernel"
  "core"
  "core_kernel"
  "ppx_jane"
  "cryptokit"        {>= "1.16" & < "1.17"}
  "dune"             {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A library that implements the websocket protocol on top of Async"
description: "
This library implements both the server and client side of
                the websocket protocol.
"
